fixing home page on mobile

--- a/src/components/About/index.scss
+++ b/src/components/About/index.scss
@@ -4,7 +4,7 @@
     img {
       float: right;
       margin-left: 70px;
-      margin-top: -50px;
+      margin-top: -70px;
       width: 25%;
       height: auto;
       animation: none;
